<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MovieDetailFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarDetailMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Detail Movie"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="posterDetailIV, dataMovieDetailTV, rateMovieDetailTV, numberVotesDetailTV, textTitleOverview, overviewMovieDetailTV "
        app:flow_firstVerticalStyle="packed"
        app:flow_verticalGap="5dp"
        app:flow_wrapMode="chain"
        app:layout_constraintTop_toBottomOf="@id/toolbarDetailMovie"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"/>

    <ImageView
        android:id="@+id/posterDetailIV"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/posterDetailIVDescription"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarDetailMovie"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/dataMovieDetailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataMovieDetailTV"
        style="@style/attributeMovieTVStyle"
        app:layout_constraintTop_toBottomOf="@id/posterDetailIV"
        app:layout_constraintStart_toStartOf="@id/flow"/>

    <TextView
        android:id="@+id/rateMovieDetailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rateMovieDetailTV"
        style="@style/attributeMovieTVStyle"
        app:layout_constraintTop_toBottomOf="@id/dataMovieDetailTV"
        app:layout_constraintStart_toStartOf="@id/flow"/>

    <TextView
        android:id="@+id/numberVotesDetailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberVotesDetailTV"
        style="@style/attributeMovieTVStyle"
        app:layout_constraintTop_toBottomOf="@id/rateMovieDetailTV"
        app:layout_constraintStart_toStartOf="@id/flow" />

    <TextView
        android:id="@+id/textTitleOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/textTitleOverview"
        style="@style/attributeMovieTVStyle"
        app:layout_constraintTop_toBottomOf="@id/numberVotesDetailTV"
        app:layout_constraintStart_toStartOf="@id/flow"/>

    <TextView
        android:id="@+id/overviewMovieDetailTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/overviewMovieDetailTVHint"
        android:textColorHint="#546E7A"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/textTitleOverview"
        app:layout_constraintStart_toStartOf="@id/flow"/>




</androidx.constraintlayout.widget.ConstraintLayout>